# tmpl

./: .gitignore  Cargo.toml  LICENSE  README.md  app.go  gen.go  go.mod  go.sum  ls.go  main.go  new.go  templates.go
cmd/: ed.go  edit.go  gen.go  generate.go  list.go  ls.go  make.go  root.go
config/: config.go  dir.go  file.go  gen.go
doc/: book.toml  requirements.md
doc/src/: SUMMARY.md  requirements.md
doc/uml/: creating-specs.puml  creating-templates.puml  editing-specs.puml  editing-templates.puml  generation.puml  listing-specs.puml  listing-templates.puml  spec-generation.puml  tmpl-overview.puml  tmpl-use-case.puml  use-case.puml
lib/: config.go  dir.go  file.go  gen.go  lib.go  lib_test.go  spec.go  template.go
src/: cli.rs  editor.rs  io.rs  lib.rs  ls.rs  main.rs  new.rs  path.rs  prompt.rs  specs.rs  template.rs
src/cmd/: cp.rs  edit.rs  generate.rs  list.rs  mod.rs  new.rs  rm.rs
tests/: common.rs  cp.rs  generate.rs  ls.rs  new.rs  rm.rs  subcommands.rs
