[package]
name = "tmpl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0"
minijinja = "2.12.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.23.0"
