[package]
name = "tmpl"
version = "0.1.2"
edition = "2024"
authors = ["Austen LeBeau <austenlebeau@gmail.com>"]
description = "A command line, template-based file generation tool."
repository = "https://codeberg.org/mcbunkus/tmpl"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities", "template-engine"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0"
minijinja = "2.12.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "*"
serial_test = "*"

[profile.release]
lto = true
strip = true
codegen-units = 1
